--- a/01-Intro.ipynb
+++ b/01-Intro.ipynb
@@ -116,64 +116,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5217e938-2edd-40c6-b147-9eb6739b0780",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### Ray libraries\n",
-    "\n",
-    "|<img src=\"images/map.png\" width=\"70%\" loading=\"lazy\">|\n",
-    "|:--|\n",
-    "|Stack of Ray libraries - unified toolkit for ML workloads.|\n",
-    "\n",
-    "#### Ray AI Runtime\n",
-    "\n",
-    "<div class=\"alert alert-info\">\n",
-    "  <strong><a href=\"https://docs.ray.io/en/latest/ray-air/getting-started.html\" target=\"_blank\">Ray AI Runtime (AIR)</a></strong> is an open-source, Python, domain specific library that equips ML engineers, data scientists, and researchers with a scalable and unified toolkit for ML applications.\n",
-    "</div>\n",
-    "\n",
-    "Ray AIR is built on top of Ray core. It caters for distributed data processing, model training, tuning, model serving, and reinforcement learning, all in Python. To that end, it enables both individual workloads and end-to-end use cases to be implemented in the single unified library.\n",
-    "\n",
-    "Ray AIR brings together an ever-growing ecosystem of integrations with your favorite machine learning frameworks.\n",
-    "\n",
-    "|<img src=\"images/e2e_air.png\" width=\"70%\" loading=\"lazy\">|\n",
-    "|:--|\n",
-    "|Ray AIR enables end-to-end ML development and provides multiple options to integrate with other tools and libraries form the MLOps ecosystem.|\n",
-    "\n",
-    "Each of the five native libraries that Ray AIR wraps is focused on a specific ML task. Because this abstraction layer is built on top of Ray Core, it is distributed and scalable.\n",
-    "\n",
-    "1. [Ray Data](https://docs.ray.io/en/latest/data/dataset.html): scalable, framework-agnostic loading and transforming raw data across training and prediction\n",
-    "1. [Ray Train](https://docs.ray.io/en/latest/train/train.html): distributed multi-node and multi-core model training with fault tolerance that integrates with your favorite training libraries\n",
-    "1. [Ray Tune](https://docs.ray.io/en/latest/tune/index.html): scales experiment execution and hyperparameter tuning to optimize model performance\n",
-    "1. [Ray Serve](https://docs.ray.io/en/latest/serve/index.html): deploys your model for online inference, with optional microbatching to improve performance\n",
-    "1. [Ray RLlib](https://docs.ray.io/en/latest/rllib/index.html): distributed reinforcement learning workloads that integrate with the other Ray AIR libraries above\n",
-    "\n",
-    "#### Integrations and ecosystem libraries\n",
-    "\n",
-    "Ray integrates with a [growing ecosystem](https://docs.ray.io/en/latest/ray-overview/ray-libraries.html) of the most popular Python and machine learning libraries and frameworks that you may already be familiar with. Instead of trying to create new standards, Ray allows you to scale existing workloads by unifying tools in a common interface. This interface enables you to run ML tasks in a distributed way, a property most of the respective backends don't have, or not to the same extent.\n",
-    "\n",
-    "For example, Ray Datasets is backed by Arrow and comes with many integrations to other frameworks, such as Spark and Dask. Ray Train and RLlib are backed by the full power of Tensorflow and PyTorch. Ray Tune supports algorithms from practically every noteable HPO tool available, including Hyperopt, Optuna, Nevergrad, Ax, SigOpt, and many others. Ray Serve can be used with frameworks such as FastAPI, gradio, and Streamlit."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ff84a95-1da1-46ce-85a3-b7b28d4158fd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c6c5ed8-ef10-4381-ac7d-3d24f0d63fcc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6f38d360-65eb-4f58-84d7-f0c874850afb",
@@ -181,9 +123,6 @@
    "outputs": [],
    "source": [
     "import ray\n",
-    "\n",
-    "if ray.is_initialized:\n",
-    "    ray.shutdown()\n",
     "\n",
     "ray.init()"
    ]
@@ -249,21 +188,64 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3763f42d-0d28-4b34-84a4-381275bd103c",
+   "id": "a549f6b4-9b73-4f4c-be6c-efe35b91804a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.groupby('is_big_tip').count().show()"
+    "import pickle\n",
+    "\n",
+    "checkpoint_serialized = pickle.dumps(result.checkpoint)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ddba84a-78e9-48d2-904b-9a699024ab76",
+   "id": "84e67bf3-cd64-41f3-814f-df32e2e41497",
    "metadata": {},
    "outputs": [],
    "source": [
-    "1.1/2.7"
+    "import pandas as pd\n",
+    "from starlette.requests import Request\n",
+    "from typing import Dict\n",
+    "from ray import serve\n",
+    "from ray.train.xgboost import XGBoostPredictor\n",
+    "\n",
+    "@serve.deployment(route_prefix=\"/\", num_replicas=2)\n",
+    "class XGBDeployment:\n",
+    "    def __init__(self, checkpoint:bytes):\n",
+    "        self._model = XGBoostPredictor.from_checkpoint(pickle.loads(checkpoint))\n",
+    "\n",
+    "    async def __call__(self, request: Request) -> Dict:\n",
+    "        data = await request.json()\n",
+    "        return { \"result\" : self._model.predict(pd.read_json(data)).predictions[0] }\n",
+    "\n",
+    "serve.run(XGBDeployment.bind(checkpoint=checkpoint_serialized))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50da49e8-b4c1-4136-b768-40151cfd5b2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_row = train_dataset.limit(1).to_pandas()\n",
+    "\n",
+    "sample_json = sample_row.drop(columns=['is_big_tip']).to_json()\n",
+    "\n",
+    "sample_json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13dad1bb-abe0-473d-82b3-4aa196f2b6f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "print(requests.post(\"http://localhost:8000/\", json = sample_json).json())"
    ]
   },
   {
@@ -275,6 +257,62 @@
    "source": [
     "ray.shutdown()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5217e938-2edd-40c6-b147-9eb6739b0780",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "|<img src=\"images/map.png\" width=\"70%\" loading=\"lazy\">|\n",
+    "|:--|\n",
+    "|Stack of Ray libraries - unified toolkit for ML workloads.|\n",
+    "\n",
+    "#### Ray AI Runtime\n",
+    "\n",
+    "<div class=\"alert alert-info\">\n",
+    "  <strong><a href=\"https://docs.ray.io/en/latest/ray-air/getting-started.html\" target=\"_blank\">Ray AI Runtime (AIR)</a></strong> is an open-source, Python, domain specific library that equips ML engineers, data scientists, and researchers with a scalable and unified toolkit for ML applications.\n",
+    "</div>\n",
+    "\n",
+    "Ray AIR is built on top of Ray core. It caters for distributed data processing, model training, tuning, model serving, and reinforcement learning, all in Python. To that end, it enables both individual workloads and end-to-end use cases to be implemented in the single unified library.\n",
+    "\n",
+    "Ray AIR brings together an ever-growing ecosystem of integrations with your favorite machine learning frameworks.\n",
+    "\n",
+    "|<img src=\"images/e2e_air.png\" width=\"70%\" loading=\"lazy\">|\n",
+    "|:--|\n",
+    "|Ray AIR enables end-to-end ML development and provides multiple options to integrate with other tools and libraries form the MLOps ecosystem.|\n",
+    "\n",
+    "Each of the five native libraries that Ray AIR wraps is focused on a specific ML task. Because this abstraction layer is built on top of Ray Core, it is distributed and scalable.\n",
+    "\n",
+    "1. [Ray Data](https://docs.ray.io/en/latest/data/dataset.html): scalable, framework-agnostic loading and transforming raw data across training and prediction\n",
+    "1. [Ray Train](https://docs.ray.io/en/latest/train/train.html): distributed multi-node and multi-core model training with fault tolerance that integrates with your favorite training libraries\n",
+    "1. [Ray Tune](https://docs.ray.io/en/latest/tune/index.html): scales experiment execution and hyperparameter tuning to optimize model performance\n",
+    "1. [Ray Serve](https://docs.ray.io/en/latest/serve/index.html): deploys your model for online inference, with optional microbatching to improve performance\n",
+    "1. [Ray RLlib](https://docs.ray.io/en/latest/rllib/index.html): distributed reinforcement learning workloads that integrate with the other Ray AIR libraries above\n",
+    "\n",
+    "#### Integrations and ecosystem libraries\n",
+    "\n",
+    "Ray integrates with a [growing ecosystem](https://docs.ray.io/en/latest/ray-overview/ray-libraries.html) of the most popular Python and machine learning libraries and frameworks that you may already be familiar with. Instead of trying to create new standards, Ray allows you to scale existing workloads by unifying tools in a common interface. This interface enables you to run ML tasks in a distributed way, a property most of the respective backends don't have, or not to the same extent.\n",
+    "\n",
+    "For example, Ray Datasets is backed by Arrow and comes with many integrations to other frameworks, such as Spark and Dask. Ray Train and RLlib are backed by the full power of Tensorflow and PyTorch. Ray Tune supports algorithms from practically every noteable HPO tool available, including Hyperopt, Optuna, Nevergrad, Ax, SigOpt, and many others. Ray Serve can be used with frameworks such as FastAPI, gradio, and Streamlit."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ff84a95-1da1-46ce-85a3-b7b28d4158fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c6c5ed8-ef10-4381-ac7d-3d24f0d63fcc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
