show even simpler deployment flavor for XGB, along with expanded pattern

--- a/01-Intro.ipynb
+++ b/01-Intro.ipynb
@@ -188,13 +188,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a549f6b4-9b73-4f4c-be6c-efe35b91804a",
+   "id": "cf89bd8a-faba-48bf-9e95-bdc43817cef1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
+    "from ray import serve\n",
+    "from ray.serve import PredictorDeployment\n",
+    "from ray.serve.http_adapters import pandas_read_json\n",
+    "from ray.train.xgboost import XGBoostPredictor\n",
     "\n",
-    "checkpoint_serialized = pickle.dumps(result.checkpoint)"
+    "serve.run(\n",
+    "    PredictorDeployment.options(\n",
+    "        name=\"XGBoostService\", num_replicas=2, route_prefix=\"/rayair\"\n",
+    "    ).bind(XGBoostPredictor, result.checkpoint, http_adapter=pandas_read_json)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fa07e6a-9787-432d-87c9-669d6f6b1fef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "sample_input = train_dataset.take(1)\n",
+    "\n",
+    "sample_input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c69d0351-e115-426d-9ada-54795750efd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_input = dict(sample_input[0])\n",
+    "del(sample_input['is_big_tip'])\n",
+    "del(sample_input['__index_level_0__'])\n",
+    "\n",
+    "output = requests.post(\"http://localhost:8000/rayair\", json=[sample_input]).json()\n",
+    "print(output)"
    ]
   },
   {
@@ -204,22 +240,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "from starlette.requests import Request\n",
     "from typing import Dict\n",
-    "from ray import serve\n",
-    "from ray.train.xgboost import XGBoostPredictor\n",
+    "import json\n",
     "\n",
     "@serve.deployment(route_prefix=\"/\", num_replicas=2)\n",
-    "class XGBDeployment:\n",
-    "    def __init__(self, checkpoint:bytes):\n",
-    "        self._model = XGBoostPredictor.from_checkpoint(pickle.loads(checkpoint))\n",
+    "class GenericDeployment:\n",
+    "    def __init__(self, demo_param:int):\n",
+    "        self._model = lambda input: demo_param * input\n",
     "\n",
     "    async def __call__(self, request: Request) -> Dict:\n",
     "        data = await request.json()\n",
-    "        return { \"result\" : self._model.predict(pd.read_json(data)).predictions[0] }\n",
+    "        data = json.loads(data)\n",
+    "        return { \"result\" : self._model(data['input']) }\n",
     "\n",
-    "serve.run(XGBDeployment.bind(checkpoint=checkpoint_serialized))"
+    "serve.run(GenericDeployment.bind(demo_param=42))"
    ]
   },
   {
@@ -229,10 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_row = train_dataset.limit(1).to_pandas()\n",
-    "\n",
-    "sample_json = sample_row.drop(columns=['is_big_tip']).to_json()\n",
-    "\n",
+    "sample_json = '{\"input\":7}'\n",
     "sample_json"
    ]
   },
