adjust np version to work around https://github.com/ray-project/ray/issues/31293

--- a/03-RLlib.ipynb
+++ b/03-RLlib.ipynb
@@ -35,7 +35,7 @@
     "config = (  # 1. Configure the algorithm,\n",
     "    DQNConfig()\n",
     "    .environment(\"CartPole-v1\")\n",
-    "    #.rollouts(num_rollout_workers=2)\n",
+    "    .rollouts(num_rollout_workers=2)\n",
     "    .framework(\"torch\")\n",
     "    .training(model={\"fcnet_hiddens\": [64, 64]})\n",
     "    .evaluation(evaluation_num_workers=1)\n",
@@ -295,9 +295,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ray.shutdown()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
