add remaining content, assets

--- a/01-Ray-Intro.ipynb
+++ b/01-Ray-Intro.ipynb
@@ -1,12 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "110d0f8c-79be-4302-a009-dcab21ebf605",
+   "cell_type": "markdown",
+   "id": "ab7ef0d1-0e5e-4dd6-ba5b-b6d530393946",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# About Ray\n",
+    "\n",
+    "<img src='images/ray_header_logo.png' width=600/>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -113,6 +115,17 @@
     "|<img src=\"images/uber.png\" width=\"70%\" loading=\"lazy\">|\n",
     "|:--|\n",
     "|Production deep learning pipeline at Uber.|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44801c40-8826-4845-aa3e-a53911d7245b",
+   "metadata": {},
+   "source": [
+    "Let's jump in and take a very quick look at code to\n",
+    "* access data\n",
+    "* train a (distributed) XGBoost model\n",
+    "* serve that model"
    ]
   },
   {
@@ -236,53 +249,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84e67bf3-cd64-41f3-814f-df32e2e41497",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from starlette.requests import Request\n",
-    "from typing import Dict\n",
-    "import json\n",
-    "\n",
-    "@serve.deployment(route_prefix=\"/\", num_replicas=2)\n",
-    "class GenericDeployment:\n",
-    "    def __init__(self, demo_param:int):\n",
-    "        self._model = lambda input: demo_param * input\n",
-    "\n",
-    "    async def __call__(self, request: Request) -> Dict:\n",
-    "        data = await request.json()\n",
-    "        data = json.loads(data)\n",
-    "        return { \"result\" : self._model(data['input']) }\n",
-    "\n",
-    "serve.run(GenericDeployment.bind(demo_param=42))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50da49e8-b4c1-4136-b768-40151cfd5b2c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_json = '{\"input\":7}'\n",
-    "sample_json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13dad1bb-abe0-473d-82b3-4aa196f2b6f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "\n",
-    "print(requests.post(\"http://localhost:8000/\", json = sample_json).json())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "9e9cd090-04d5-4c81-bce7-ad2515a71487",
    "metadata": {},
    "outputs": [],
@@ -329,30 +295,6 @@
     "\n",
     "For example, Ray Datasets is backed by Arrow and comes with many integrations to other frameworks, such as Spark and Dask. Ray Train and RLlib are backed by the full power of Tensorflow and PyTorch. Ray Tune supports algorithms from practically every noteable HPO tool available, including Hyperopt, Optuna, Nevergrad, Ax, SigOpt, and many others. Ray Serve can be used with frameworks such as FastAPI, gradio, and Streamlit."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ff84a95-1da1-46ce-85a3-b7b28d4158fd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c6c5ed8-ef10-4381-ac7d-3d24f0d63fcc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "636311e3-137d-48f5-b462-aca024a35720",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
