--- a/03-RLlib.ipynb
+++ b/03-RLlib.ipynb
@@ -8,20 +8,13 @@
    "source": [
     "# RLlib\n",
     "\n",
-    "> __Reinforcement Learning__ is a family of techniques that train *agents* to act in an *environment* to maximize *reward*. Famous examples include agents that can play chess, go, or Atari games ... but the field is hot because those agents can also be robots learning to do work, autonomous vehicles driving, or even virtual salesmen learning to get the best price possible from a customer.\n",
+    "__Reinforcement Learning__ is a family of techniques that train *agents* to act in an *environment* to maximize *reward*. Famous examples include agents that can play chess, go, or Atari games ... but the field is hot because those agents can also be robots learning to do work, virtual salesmen learning to get the best price possible from a customer, or abstract planners laying out equipment for a power grid.\n",
     "\n",
-    "Ray provides RLlib as a high-level library that encapsulates both the distribution (clustered) training as well as many popular reinforcement learning algorithms (the code that turns interactions and rewards into models and policies).\n",
+    "Ray provides RLlib as a high-level library that encapsulates both the distributed (clustered) training as well as many popular reinforcement learning algorithms (the code that turns interactions and rewards into models and policies).\n",
     "\n",
     "Here, to create a simple example, we'll use __Deep Q-Learning__ (a foundational deep RL algorithm) to learn OpenAI's \"cart-pole\" (https://gym.openai.com/envs/CartPole-v1/) environment, which you can visualize like this:\n",
     "\n",
     "<video src='images/cpv1.mp4' controls='true'>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This example, and the lab, are based on the demo in Dean Wampler's excellent intro paper, \"What is Ray?\" on O'Reilly Safari Online: https://learning.oreilly.com/library/view/what-is-ray/9781492085768/"
    ]
   },
   {
@@ -32,7 +25,7 @@
    "source": [
     "from ray.rllib.algorithms.dqn import DQNConfig\n",
     "\n",
-    "config = (  # 1. Configure the algorithm,\n",
+    "config = (\n",
     "    DQNConfig()\n",
     "    .environment(\"CartPole-v1\")\n",
     "    .rollouts(num_rollout_workers=2)\n",
@@ -41,12 +34,7 @@
     "    .evaluation(evaluation_num_workers=1)\n",
     ")\n",
     "\n",
-    "algo = config.build()  # 2. build the algorithm,\n",
-    "\n",
-    "#for _ in range(5):\n",
-    "print(algo.train())  # 3. train it,\n",
-    "\n",
-    "algo.evaluate()  # 4. and evaluate it."
+    "algo = config.build()"
    ]
   },
   {
@@ -55,16 +43,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fmt = '{:3d},{:8.4f},{:8.4f},{:8.4f}'\n",
-    "last_checkpoint = ''\n",
-    "for n in range(N_ITER):\n",
-    "  #  result = trainer.train()\n",
-    "    min  = result['episode_reward_min']\n",
-    "    mean = result['episode_reward_mean']\n",
-    "    max  = result['episode_reward_max']\n",
-    "    last_checkpoint = trainer.save(checkpoint_dir)\n",
-    "    print(fmt.format(n, min, mean, max))\n",
-    "print(f'last checkpoint file: {last_checkpoint}')"
+    "for n in range(3):\n",
+    "    output = algo.train()\n",
+    "    rmin  = output['episode_reward_min']\n",
+    "    rmean = output['episode_reward_mean']\n",
+    "    rmax  = output['episode_reward_max']\n",
+    "    print(f'Iteration {n} : {rmin} - {rmean} - {rmax}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "algo.evaluate()"
    ]
   },
   {
@@ -82,7 +75,7 @@
    "source": [
     "## RLlib Usage\n",
     "\n",
-    "How you approach RLlib will depend on whether you are toward the research direction vs. the applied direction in your current work.\n",
+    "How you approach RLlib will depend on whether you focus on research vs. application in your current work.\n",
     "\n",
     "Today, we're focused on getting started with applying RLlib using its built-in architectural patterns and algorithms, but customizing\n",
     "* the environment (environment representation, action choices, rewards)\n",
@@ -207,19 +200,7 @@
     "algo = DQN.get_default_config().environment(SimpleCorridor, env_config={'corridor_length':5}) \\\n",
     "                               .framework('torch') \\\n",
     "                               .training(model={\"custom_model\": \"my_model\", \"vf_share_layers\": True,}) \\\n",
-    "                               .build()\n",
-    "\n",
-    "'''\n",
-    "for n in range(20): #training iterations\n",
-    "    result = trainer.train()\n",
-    "    min  = result['episode_reward_min']\n",
-    "    mean = result['episode_reward_mean']\n",
-    "    max  = result['episode_reward_max']\n",
-    "    fmt = '{:3d},{:8.4f},{:8.4f},{:8.4f}'\n",
-    "    print(fmt.format(n, min, mean, max))\n",
-    "    \n",
-    "print(pretty_print(result))\n",
-    "'''"
+    "                               .build()"
    ]
   },
   {
@@ -243,7 +224,7 @@
     "\n",
     "__We'll redo the earlier OpenAI Gym Cart-Pole problem, but swap in PPO for the algorithm__\n",
     "\n",
-    "Note that we import `ppo` from `ray.rllib.agents`\n",
+    "Note that we import `PPOConfig` from `ray.rllib.algorithms.ppo`\n",
     "\n",
     "By replacing \"DQN\" with \"PPO\" you can quickly get better results.\n",
     "\n",
@@ -268,9 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Copy the code from the OpenAI gym example, but replace references to DQN with references to PPO\n",
-    "\n",
-    "# HINT: try 10 iterations -- that will be plenty for PPO to solve the problem"
+    "# Copy the code from the OpenAI gym example, but replace references to DQN with references to PPO"
    ]
   },
   {
