--- a/03a-RLlib-Solution.ipynb
+++ b/03a-RLlib-Solution.ipynb
@@ -4,19 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ray RLlib and PPO\n",
+    "## Solution: Ray RLlib and PPO\n",
     "\n",
     "PPO of Proximal Policy Optimization is a more powerful (and more complicated) algorithm than the DQN we've looked at.\n",
     "\n",
     "But thanks to Ray's implementations, you can swap it in easily.\n",
     "\n",
-    "Note that we import `ppo` from `ray.rllib.agents`\n",
+    "__We'll redo the earlier OpenAI Gym Cart-Pole problem, but swap in PPO for the algorithm__\n",
+    "\n",
+    "Note that we import `PPOConfig` from `ray.rllib.algorithms.ppo`\n",
     "\n",
     "By replacing \"DQN\" with \"PPO\" you can quickly get better results.\n",
     "\n",
     ">\n",
     "> Interested in PPO details? Check out this writeup: https://jonathan-hui.medium.com/rl-proximal-policy-optimization-ppo-explained-77f014ec3f12\n",
-    ">"
+    "> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ray\n",
+    "import ray.rllib.agents.ppo as ppo"
    ]
   },
   {
@@ -27,7 +39,7 @@
    "source": [
     "from ray.rllib.algorithms.ppo import PPOConfig\n",
     "\n",
-    "config = (  # 1. Configure the algorithm,\n",
+    "config = (\n",
     "    PPOConfig()\n",
     "    .environment(\"CartPole-v1\")\n",
     "    .rollouts(num_rollout_workers=2)\n",
@@ -36,12 +48,7 @@
     "    .evaluation(evaluation_num_workers=1)\n",
     ")\n",
     "\n",
-    "algo = config.build()  # 2. build the algorithm,\n",
-    "\n",
-    "# for _ in range(5):\n",
-    "#    print(algo.train())  # 3. train it,\n",
-    "\n",
-    "# algo.evaluate()  # 4. and evaluate it."
+    "algo = config.build()"
    ]
   },
   {
@@ -50,16 +57,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fmt = '{:3d},{:8.4f},{:8.4f},{:8.4f}'\n",
-    "last_checkpoint = ''\n",
     "for n in range(3):\n",
-    "    result = algo.train()\n",
-    "    min  = result['episode_reward_min']\n",
-    "    mean = result['episode_reward_mean']\n",
-    "    max  = result['episode_reward_max']\n",
-    "    #last_checkpoint = trainer.save(checkpoint_dir)\n",
-    "    print(fmt.format(n, min, mean, max))\n",
-    "print(f'last checkpoint file: {last_checkpoint}')"
+    "    output = algo.train()\n",
+    "    rmin  = output['episode_reward_min']\n",
+    "    rmean = output['episode_reward_mean']\n",
+    "    rmax  = output['episode_reward_max']\n",
+    "    print(f'Iteration {n} : {rmin} - {rmean} - {rmax}')"
    ]
   },
   {
@@ -67,14 +70,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "algo.evaluate()"
+   ]
   }
  ],
  "metadata": {
