clear outputs; add shoutout to Anyscale and Ray docs

--- a/00-Intro.ipynb
+++ b/00-Intro.ipynb
@@ -22,6 +22,7 @@
     "## How to Expect It\n",
     "\n",
     "* All content is in these notebooks\n",
+    "    * Shoutout to: Ray documentation; Anyscale developer relations, evangelism, and training\n",
     "* Play along if you have a local environment\n",
     "* Feel free to experiment\n",
     "* Ask questions\n",
