update copy in intro notebook

--- a/00-Intro.ipynb
+++ b/00-Intro.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -9,7 +10,7 @@
    "source": [
     "# Ray 2.x First Steps\n",
     "\n",
-    "## What to Expect\n",
+    "## What We'll Cover\n",
     "\n",
     "* Intro to Ray\n",
     "* Ray and the Data Science Workflow\n",
@@ -18,8 +19,9 @@
     "* Reinforcement Learning at Scale\n",
     "* Model Depoyment with RayServe\n",
     "* Ray Core\n",
+    "* Wrapup\n",
     "\n",
-    "## How to Expect It\n",
+    "## Materials/Operations\n",
     "\n",
     "* All content is in these notebooks\n",
     "    * Shoutout to: Ray documentation; Anyscale developer relations, evangelism, and training\n",
@@ -33,6 +35,8 @@
     "#### Contact\n",
     "* https://www.linkedin.com/in/adbreind\n",
     "* adbreind@gmail.com\n",
+    "* `@adbreind` (Twitter)\n",
+    "* `@adbreind@mastodon.xyz` (Mastodon)\n",
     "\n",
     "<img src=\"https://materials.s3.amazonaws.com/i/lpMDU9j.jpg\" width=200 style=\"margin-right:2em;margin-top:1em\">\n",
     "\n",
