Finished rearranging some of the serve content Updated wrapup

--- a/04-RayServe.ipynb
+++ b/04-RayServe.ipynb
@@ -80,11 +80,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f5b73f78-0d06-45a2-abb3-5121819011ed",
+   "metadata": {},
+   "source": [
+    "> __Loading models__\n",
+    "> \n",
+    "> Commonly, we want to load a model once per process, not on every request. This might be because the model is large/expensive to load, or we're retrieving it from a another system like a model registry or model database, and we want to minimize traffic against that other system while caching the model locally for performance.\n",
+    ">\n",
+    "> Note how this RayServe example shows a pattern where we load/create the model in the service constructor (`__init__`), assign it to an instance variable, and then use that instance variable as needed for prediction.\n",
+    ">\n",
+    "> If you're loading very large models and want to improve performance further, there a few cool Ray tricks explained in this article, where the authors speed up loading a ~420MB flavor of the BERT language model: https://medium.com/ibm-data-ai/how-to-load-pytorch-models-340-times-faster-with-ray-8be751a6944c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "85a0acd8-3817-4ffb-b542-59cc7ee245b5",
    "metadata": {},
    "source": [
-    "Ok that illustrates the framework pattern a little bit.\n",
-    "\n",
     "Next let's look at some more interesting features that can power more complex use cases."
    ]
   },
@@ -325,39 +337,6 @@
     "    resp = requests.get(\"http://127.0.0.1:8000/composed\", data=\"hey!\")\n",
     "    print(resp.json())"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d13ebcd9-e5fa-428c-85e7-33e74cc96a9c",
-   "metadata": {},
-   "source": [
-    "## Loading models\n",
-    "\n",
-    "Commonly, we want to load a model once per process, not on every request.\n",
-    "\n",
-    "This might be because the model is large/expensive to load, or we're retrieving it from a another system like a model registry or model database, and we want to minimize traffic against that other system while caching the model locally for performance.\n",
-    "\n",
-    "With RayServe, the pattern is to load/create the model in the service constructor (`__init__`), assign it to an instance variable, and then use that instance variable as needed for prediction. An example is shown at https://docs.ray.io/en/latest/serve/ml-models.html#integration-with-model-registries\n",
-    "\n",
-    "If you're loading very large models and want to improve performance further, there a few cool Ray tricks explained in this article, where the authors speed up loading a ~420MB flavor of the BERT language model: https://medium.com/ibm-data-ai/how-to-load-pytorch-models-340-times-faster-with-ray-8be751a6944c"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9467e469-9851-44c9-a6f8-680d291fdf4d",
-   "metadata": {},
-   "source": [
-    "Just to pull back the curtain and take some of the magic away... what if our model didn't \"plug right in\" to a matching Predictor and Deployment class?\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "741e3015-9ce6-4183-800e-e0ebedc51d72",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
