--- a/06-Wrapup.ipynb
+++ b/06-Wrapup.ipynb
@@ -1,24 +1,39 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Wrapup\n",
     "\n",
-    "* Ray Community\n",
-    "  * Slack: https://forms.gle/9TSdDYUgxYs8SA9e8\n",
-    "  * Discuss: https://discuss.ray.io/\n",
-    "  * GitHub: https://github.com/ray-project/ray\n"
+    "## Key Takeways\n",
+    "\n",
+    "* High-level, high-produtivity API abstractions for training, tuning, serving, RL, and more\n",
+    "* Low-level APIs for arbitrary custom distributed computation\n",
+    "* Data ingest and last-mile data transformation with Ray Data\n",
+    "    * Get your data from files, data structures/queries (Modin, Dask, Spark) or elsewhere\n",
+    "* Distributed scheduler\n",
+    "* Multi-tier storage\n",
+    "* Fine-grained resource allocation for more efficient resource usage\n",
+    "\n",
+    "## Anyscale\n",
+    "\n",
+    "* Founded by Ray creators\n",
+    "* Fully-managed platform for Ray \n",
+    "* https://anyscale.com\n",
+    "\n",
+    "## Ray Community\n",
+    "\n",
+    "* Slack: https://forms.gle/9TSdDYUgxYs8SA9e8\n",
+    "* Discuss: https://discuss.ray.io/\n",
+    "* GitHub: https://github.com/ray-project/ray"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Q & A"
+    "## Q & A"
    ]
   },
   {
@@ -28,11 +43,24 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.0"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
