--- a/03-RLlib.ipynb
+++ b/03-RLlib.ipynb
@@ -6,7 +6,7 @@
     "tags": []
    },
    "source": [
-    "# RLlib\n",
+    "# Reinforcement Learning with Ray RLlib\n",
     "\n",
     "__Reinforcement Learning__ is a family of techniques that train *agents* to act in an *environment* to maximize *reward*. Famous examples include agents that can play chess, go, or Atari games ... but the field is hot because those agents can also be robots learning to do work, virtual salesmen learning to get the best price possible from a customer, or abstract planners laying out equipment for a power grid.\n",
     "\n",
