fix typo, add note

--- a/00-Intro.ipynb
+++ b/00-Intro.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -17,7 +16,7 @@
     "* Ray Architecture and Setup\n",
     "* Training and Tuning Models with RayAIR\n",
     "* Reinforcement Learning at Scale\n",
-    "* Model Depoyment with RayServe\n",
+    "* Model Deployment with RayServe\n",
     "* Ray Core\n",
     "* Wrapup\n",
     "\n",
