--- a/04-RayServe.ipynb
+++ b/04-RayServe.ipynb
@@ -142,6 +142,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ccbde4da-b9bf-4f0a-b7c1-bcc80cccc145",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Counter.get_handle().remote()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a805de54-6397-4eaf-8655-c44090c90b73",
    "metadata": {},
    "outputs": [],
@@ -172,7 +182,7 @@
     "@serve.deployment(route_prefix=\"/adder\")\n",
     "class BatchAdder:\n",
     "    @serve.batch(max_batch_size=4)\n",
-    "    async def handle_batch(self, numbers):\n",
+    "    async def handle_batch(self, numbers): # numbers is a list\n",
     "        input_array = np.array(numbers)\n",
     "        print(\"Our input array has shape:\", input_array.shape)\n",
     "        # Sleep for 200ms, this could be performing CPU intensive computation\n",
@@ -337,6 +347,14 @@
     "    resp = requests.get(\"http://127.0.0.1:8000/composed\", data=\"hey!\")\n",
     "    print(resp.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50cf7da0-3467-4e7c-ae7e-d99bde3729b4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
