add batch prediction to initial 10-minute end-to-end demo

--- a/01-Ray-Intro.ipynb
+++ b/01-Ray-Intro.ipynb
@@ -125,6 +125,7 @@
     "Let's jump in and take a very quick look at code to\n",
     "* access data\n",
     "* train a (distributed) XGBoost model\n",
+    "* perform batch prediction\n",
     "* serve that model"
    ]
   },
@@ -201,6 +202,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cc3b5249-3f12-4f6b-804b-7b79ccba42d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ray.train.xgboost import XGBoostPredictor\n",
+    "from ray.train.batch_predictor import BatchPredictor\n",
+    "\n",
+    "batch_predictor = BatchPredictor.from_checkpoint(result.checkpoint, XGBoostPredictor)\n",
+    "\n",
+    "predicted_probabilities = batch_predictor.predict(valid_dataset.drop_columns(['is_big_tip']))\n",
+    "predicted_probabilities.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "cf89bd8a-faba-48bf-9e95-bdc43817cef1",
    "metadata": {},
    "outputs": [],
@@ -208,7 +225,6 @@
     "from ray import serve\n",
     "from ray.serve import PredictorDeployment\n",
     "from ray.serve.http_adapters import pandas_read_json\n",
-    "from ray.train.xgboost import XGBoostPredictor\n",
     "\n",
     "serve.run(\n",
     "    PredictorDeployment.options(\n",
@@ -226,7 +242,7 @@
    "source": [
     "import requests\n",
     "\n",
-    "sample_input = train_dataset.take(1)\n",
+    "sample_input = valid_dataset.take(1)\n",
     "\n",
     "sample_input"
    ]
