update w oversubscribed cores for demos

--- a/02-Arch-Train-Tune.ipynb
+++ b/02-Arch-Train-Tune.ipynb
@@ -154,20 +154,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ray"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07efa93a-6f51-4e73-a66b-a52ce2901a38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if ray.is_initialized:\n",
-    "    ray.shutdown()\n",
+    "import ray\n",
     "\n",
-    "ray.init()"
+    "ray.init(num_cpus=8)"
    ]
   },
   {
@@ -705,14 +694,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e984aeaa-e2fd-4eaa-8244-663cb94581f8",
-   "metadata": {},
-   "source": [
-    "Now, you can execute tuning on `num_samples=10` trials. After tuning, you can query the `ResultGrid` object to see metrics, results, and checkpoints of each trial."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "b8192447-8e65-4299-8e23-010c7ff950ca",
    "metadata": {},
    "source": [
@@ -756,7 +737,9 @@
    "outputs": [],
    "source": [
     "print(f\"Training accuracy: {1 - best_result.metrics['train-error']:.4f}\")\n",
-    "print(f\"Validation accuracy: {1 - best_result.metrics['valid-error']:.4f}\")"
+    "print(f\"Validation accuracy: {1 - best_result.metrics['valid-error']:.4f}\")\n",
+    "\n",
+    "ray.shutdown()"
    ]
   },
   {
