--- a/03-RLlib.ipynb
+++ b/03-RLlib.ipynb
@@ -23,6 +23,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import ray\n",
+    "\n",
+    "ray.init(num_cpus=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from ray.rllib.algorithms.dqn import DQNConfig\n",
     "\n",
     "config = (\n",
@@ -274,7 +285,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ray.shutdown()"
+   ]
   }
  ],
  "metadata": {
