--- a/03a-RLlib-Solution.ipynb
+++ b/03a-RLlib-Solution.ipynb
@@ -28,7 +28,8 @@
    "outputs": [],
    "source": [
     "import ray\n",
-    "import ray.rllib.agents.ppo as ppo"
+    "\n",
+    "ray.init(num_cpus=8)"
    ]
   },
   {
@@ -37,6 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import ray.rllib.agents.ppo as ppo\n",
     "from ray.rllib.algorithms.ppo import PPOConfig\n",
     "\n",
     "config = (\n",
@@ -72,6 +74,15 @@
    "outputs": [],
    "source": [
     "algo.evaluate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray.shutdown()"
    ]
   }
  ],
