--- a/04-RayServe.ipynb
+++ b/04-RayServe.ipynb
@@ -25,6 +25,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a837f298-7987-480f-b9e1-5a4f43d86ef9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ray\n",
+    "\n",
+    "ray.init(num_cpus=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "65198e11-3d2f-49db-a682-a205e7af8529",
    "metadata": {},
    "outputs": [],
@@ -32,7 +44,6 @@
     "from starlette.requests import Request\n",
     "from typing import Dict\n",
     "import json\n",
-    "import ray\n",
     "from ray import serve\n",
     "\n",
     "class MyModel:\n",
@@ -354,7 +365,9 @@
    "id": "50cf7da0-3467-4e7c-ae7e-d99bde3729b4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ray.shutdown()"
+   ]
   }
  ],
  "metadata": {
