--- a/05-Ray-Core.ipynb
+++ b/05-Ray-Core.ipynb
@@ -28,7 +28,9 @@
     "\n",
     "import numpy as np\n",
     "from numpy import loadtxt\n",
-    "import ray"
+    "import ray\n",
+    "\n",
+    "ray.init(num_cpus=8)"
    ]
   },
   {
@@ -529,7 +531,9 @@
    "id": "03a57a64-89df-4cc4-9817-e8eac2896807",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ray.shutdown()"
+   ]
   }
  ],
  "metadata": {
